@@ -254,10 +254,14 @@ import org.akhikhl.gretty.AppAfterIntegrationTestTask
 
 import java.nio.file.Paths
 
+test {
+  jvmArgs = jvmArguments
+}
+
 gretty {
   httpPort = 8081
   contextPath = '/thredds'
-  jvmArgs = ['--illegal-access=permit', '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED']
+  jvmArgs = jvmArguments
 }
 
 def testInfomation = [[name: 'freshInstallTest',
